--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-<h1> Food Place </h1>
+<h1> Food House </h1>
 <nav>
     <ul>
         <a href="#"><li>Home</li></a>
@@ -41,8 +41,8 @@
                             <h4> fried rice</h4>
                             <button>Order</button>
                             <div class="item">
-                                <img src="images/jollof rice.jpg">
-                                <h4> jollof rice</h4>
+                                <img src="images/Jollof Rice.jpg">
+                                <h4> Jollof Rice</h4>
                                 <button>Order</button>
     </div>
 </section>
