--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <button>Order</button>
             <div class="item">
                 <img src="images/Yam porridge.jpg">
-                <h4> Yam porridge</h4>
+                <h4> Yam Porridge</h4>
                 <button>Order</button>
                 <div class="item">
                     <img src="images/Uziza Soup.jpg">
@@ -34,11 +34,11 @@
                     <button>Order</button>
                     <div class="item">
                         <img src="images/fried rice with chiken.jpg">
-                        <h4> Fried rice with chiken</h4>
+                        <h4> Fried Rice with Chiken</h4>
                         <button>Order</button>
                         <div class="item">
                             <img src="images/fried rice.jpg">
-                            <h4> fried rice</h4>
+                            <h4> Fried Rice</h4>
                             <button>Order</button>
                             <div class="item">
                                 <img src="images/Jollof Rice.jpg">
