--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                             <h4> Fried Rice</h4>
                             <button>Order</button>
                             <div class="item">
-                                <img src="images/Jollof Rice.jpg">
+                                <img src="images/Jollof rice.jpg">
                                 <h4> Jollof Rice</h4>
                                 <button>Order</button>
     </div>
