--- a/index.html
+++ b/index.html
@@ -18,31 +18,31 @@
 <section class="items">
     <div class="item">
         <img src="images/Egusi Soup.jpg">
-        <h4> Egusi Soup</h4>
+        <h4> Egusi Soup </h4>
         <button>Order</button>
         <div class="item">
             <img src="images/oha soup.jpg">
-            <h4> Oha Soup</h4>
+            <h4> Oha Soup </h4>
             <button>Order</button>
             <div class="item">
                 <img src="images/Yam porridge.jpg">
-                <h4> Yam Porridge</h4>
+                <h4> Yam Porridge </h4>
                 <button>Order</button>
                 <div class="item">
                     <img src="images/Uziza Soup.jpg">
-                    <h4> Uziza Soup</h4>
+                    <h4> Uziza Soup </h4>
                     <button>Order</button>
                     <div class="item">
                         <img src="images/fried rice with chiken.jpg">
-                        <h4> Fried Rice with Chiken</h4>
+                        <h4> Fried Rice with Chiken </h4>
                         <button>Order</button>
                         <div class="item">
                             <img src="images/fried rice.jpg">
-                            <h4> Fried Rice</h4>
+                            <h4> Fried Rice </h4>
                             <button>Order</button>
                             <div class="item">
-                                <img src="images/Jollof rice.jpg">
-                                <h4> Jollof Rice</h4>
+                                <img src="images/Jollof Rice.jpg">
+                                <h4> Jollof Rice </h4>
                                 <button>Order</button>
     </div>
 </section>
